tests/snapshots/snapshot_tests__xcodebuild_build_failed_compact.snap
---
source: tests/snapshot_tests.rs
assertion_line: 14
expression: out.content
---
[31mBUILD FAILED[0m  2 errors, 1 warning

[1mdev/MyApp/ContentView.swift:42:15[0m
  [31merror:[0m use of unresolved identifier 'foo'
[1mdev/MyApp/LoginView.swift:10:5[0m
  [31merror:[0m cannot convert value of type 'Int' to 'String'

** BUILD FAILED **
