tests/snapshots/snapshot_tests__xcodebuild_build_succeeded_compact.snap
---
source: tests/snapshot_tests.rs
assertion_line: 28
expression: out.content
---
BUILD SUCCEEDED  (1 warning)
