tests/snapshots/snapshot_tests__xcodebuild_test_failed_compact.snap
---
source: tests/snapshot_tests.rs
assertion_line: 37
expression: out.content
---
[31mTEST FAILED[0m  3 tests — [32m2 passed[0m, [31m1 failed[0m

  [31m✗[0m -[MyAppTests testPayment]
    XCTAssertEqual failed: ("200") is not equal to ("401")
