tests/snapshots/snapshot_tests__xcodebuild_test_succeeded_compact.snap
---
source: tests/snapshot_tests.rs
assertion_line: 44
expression: out.content
---
[32mTEST SUCCEEDED[0m  2 tests — [32m2 passed[0m
